# auto_session

./: .gitignore  API_USAGE.md  MESSAGE_PROCESS_DESIGN.md  README.md  SESSION_LIFECYCLE_DESIGN.md  pyproject.toml  run_api.py  start.py
scripts/: add_redis_task.py  create_tables.py
src/: config.yaml
src/auto_session/: __init__.py  api.py  config.py  database.py  models.py  session_manager.py  session_task_manager.py  tools.py
src/auto_session/utils/: logger.py  tools.py
tests/: test_api.py  test_db_enum.py  test_message_processing.py  test_session_manager.py
